# WebScrapper

./: README.md  pyproject.toml
src/webscrapper/: main.py  models.py  page.py  product.py  schema.py  scrap.py  service.py
src/webscrapper/data/: scrapper.db
src/webscrapper/database/: database.py  models.py  service.py
src/webscrapper/database/data/: scrapper.db
src/webscrapper/scrapper/: scrap.py
src/webscrapper/terminal/: main.py  terminal_service.py
src/webscrapper/window/: dialogs.py  main.py  views.py  window_service.py
