[tool.poetry]
name = "webscrapper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "webscrapper", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
psycopg2-binary = "^2.9.4"
pydantic = "^1.10.2"
lxml = "^4.9.1"
sqlalchemy = "^1.4.42"
sqlalchemy-utils = "^0.38.3"
tabulate = "^0.9.0"
simple-term-menu = "^1.5.2"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
ipdb = "^0.13.9"
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
