[tool.poetry]
name = "webscrapper"
version = "0.1.0"
description = ""
authors = ["Damian Czajkowski <damian.czajkowski@mirumee.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
psycopg2-binary = "^2.9.5"
pydantic = "^1.10.2"
lxml = "^4.9.1"
SQLAlchemy = "^1.4.42"
SQLAlchemy-Utils = "^0.38.3"
tabulate = "^0.9.0"
simple-term-menu = "^1.5.2"
curses-menu = "^0.6.7"
rich = "^12.6.0"
textual = "^0.3.0"
consolemenu = "^1.0.1"
console-menu = "^0.7.1"
picotui = "^1.2.1"
pyfiglet = "^0.8.post1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
ipdb = "^0.13.9"
ipython = "^8.5.0"
mypy = "^0.982"

[tool.poetry.group.dev.dependencies]
mypy = "^0.982"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
