[tool.poetry]
name = "webscrapper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
psycopg2-binary = "^2.9.5"
pydantic = "^1.10.2"
lxml = "^4.9.1"
SQLAlchemy = "^1.4.44"
SQLAlchemy-Utils = "^0.38.3"
PyQt6 = "^6.4.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
ipdb = "^0.13.9"
ipython = "^8.6.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
